<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".registration.LoginFragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:background="@drawable/gradient_bg"
                android:padding="@dimen/margin_horizontal">

                <ImageView
                    android:id="@+id/iv_bk_flight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/largePadding"
                    android:scaleType="center"
                    android:contentDescription="@string/image_source"
                    android:src="@drawable/ic_nano_header" />


                <TextView
                    android:id="@+id/tv_login_tiltle"
                    style="@style/BoldMediumHeadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/login"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_editetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/mediumPadding"
                android:orientation="vertical">


                <TextView
                    style="@style/BoldHeadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email"
                    android:textSize="@dimen/regularText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/regular_edittext_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:hint="@string/enter_username_email"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/BoldHeadingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xXXSmallPadding"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/password"
                    android:textSize="@dimen/regularText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_bk_flight" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/regular_edittext_default"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/main_material_text_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainMaterialButtonHeight"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/mediumPadding"
                android:layout_marginBottom="@dimen/mediumPadding"
                android:elevation="@dimen/xXXSmallPadding"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/largePadding"
                android:paddingVertical="@dimen/xXSmallPadding"
                android:text="@string/continue_str"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/check_box_policies"
                style="@style/BoldHeadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:text="@string/needhelp" />
        </LinearLayout>
    </ScrollView>


</layout>