<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_220sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:padding="@dimen/margin_horizontal"
        android:background="@drawable/popup_menu_bg">

        <ImageView
            android:id="@+id/ivToggle"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_weight="0.25"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_source"/>

        <LinearLayout
            android:id="@+id/llTitleBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:weightSum="4"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_weight="3"
                app:icon="@drawable/ic_share"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/xXSmallPadding"
                android:id="@+id/btnOrder"
                android:layout_weight="1"
                style="@style/main_material_text_btn"
                android:layout_gravity="center_horizontal"
                android:text="@string/order_now" />
        </LinearLayout>
        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTitleBlock"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingVertical="@dimen/xSmallPadding"
            android:text="" />

        <TextView
            android:id="@+id/itemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="@dimen/xXSmallPadding"
            android:text="" />

        <RelativeLayout
            android:id="@+id/ratingBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/xXXSmallPadding"
            android:background="@drawable/rating_bar"
            android:layout_alignParentBottom="true">
            <TextView
                android:id="@+id/ratingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingBottom="@dimen/xXSmallPadding"
                android:text="" />

            <TextView
                android:id="@+id/ratingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ratingCount"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginEnd="@dimen/xSmallPadding"
                android:paddingBottom="@dimen/xXSmallPadding"
                android:text="" />


            <RatingBar
                android:id="@+id/rBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ratingValue"
                android:layout_below="@+id/ratingCount"
                android:background="@android:color/transparent"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="@color/ratingColor"
                android:stepSize="0.5"
                android:contentDescription="@string/rating_bar"
                android:switchTextAppearance="@style/TextStyle"
                android:theme="@style/Widget.AppCompat.RatingBar" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>